--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
+  <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
 </head>
 
@@ -50,7 +51,7 @@
     </div>
     <br>
     <div>
-      <h2><strong>Your</strong> Name</h2>
+      <h2><span class="first-name">Your</span> <span class="last-name">Name</span></h2>
     </div>
   </header>
 
