--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/form.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
   <!-- External CSS - CDNs -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -67,6 +68,17 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
+    </section>
+    <section>
+      <div class="tweet-header">
+        <span class="user-name">The name</span><span class="user-tag">The tag</span>
+      </div>
+      <p>This si th e tweet</p>
+      <footer class="tweet-footer">
+        <div>10 days ago</div>
+        <div>icons</div>
+
+      </footer>
     </section>
     <!-- <p>What are you humming about</p>
     <button>Tweet</button>
