--- a/public/index.html
+++ b/public/index.html
@@ -69,14 +69,23 @@
         </div>
       </form>
     </section>
-    <section>
+    <section class="tweet">
       <div class="tweet-header">
-        <span class="user-name">The name</span><span class="user-tag">The tag</span>
+        <div class="name-image">
+          <img src="https://i.imgur.com/73hZDYK.png" alt="avatar" />
+          <span class="user-name">Newton</span>
+        </div>
+        <span class="user-tag">@SirIsaac</span>
       </div>
-      <p>This si th e tweet</p>
+      <p>This is the tweet</p>
+      <!-- <br> -->
       <footer class="tweet-footer">
         <div>10 days ago</div>
-        <div>icons</div>
+        <div class="icons">
+          <i class="fa-solid fa-flag"></i>
+          <i class="fa-solid fa-retweet"></i>
+          <i class="fa-solid fa-heart"></i>
+        </div>
 
       </footer>
     </section>
