--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
       <i class="arrow-icon fa-solid fa-angles-down"></i>
     </div>
   </nav>
-  <header>
+  <header class="page-header">
     <div>
       <img src="/images/profile-hex.png">
     </div>
@@ -69,17 +69,17 @@
         </div>
       </form>
     </section>
-    <section class="tweet">
-      <div class="tweet-header">
+    <article class="tweet-container">
+      <header class="tweet-header">
         <div class="name-image">
           <img src="https://i.imgur.com/73hZDYK.png" alt="avatar" />
           <span class="user-name">Newton</span>
         </div>
         <span class="user-tag">@SirIsaac</span>
-      </div>
+      </header>
       <p>This is the tweet</p>
       <!-- <br> -->
-      <footer class="tweet-footer">
+      <footer>
         <div>10 days ago</div>
         <div class="icons">
           <i class="fa-solid fa-flag"></i>
@@ -88,7 +88,7 @@
         </div>
 
       </footer>
-    </section>
+    </article>
     <!-- <p>What are you humming about</p>
     <button>Tweet</button>
     <h1>Hello</h1>
