--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   <script type="text/javascript" src="/scripts/client.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   <script type="text/javascript" src="/scripts/populate-tweets.js"></script>
+  <script type="text/javascript" src="/scripts/create-new-tweet.js"></script>
 
 </head>
 
@@ -53,7 +54,7 @@
     </div>
     <br>
     <div>
-      <h2><span class="first-name">Your</span> <span class="last-name">Name</span></h2>
+      <h2><span class="first-name">Maxime</span> <span class="last-name">Hum</span></h2>
     </div>
   </header>
 
