RE: added error block and animation, on form validation

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,12 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
+      <div id="form-error">
+        <i class="fa-solid fa-triangle-exclamation"></i>
+        <p>There was an error with your form submission</p>
+        <p class="error-detail"></p>
+        <button>Yes sir</button>
+      </div>
     </section>
   </main>
 </body>
