fixed proper loading after post

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,8 @@
         <button>Yes sir</button>
       </div>
     </section>
+    <section class="tweets-list">
+    </section>
   </main>
 </body>
 
