--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+  <link rel="stylesheet" media="(max-width=600px)" href="/styles/small.css" type="text/css" />
 
   <!-- External CSS - CDNs -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -34,7 +35,6 @@
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-  <script type="text/javascript" src="/scripts/populate-tweets.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
     integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -49,36 +49,38 @@
       <i class="arrow-icon fa-solid fa-angles-down"></i>
     </div>
   </nav>
-  <header class="page-header">
-    <div>
-      <img src="/images/profile-hex.png">
-    </div>
-    <br>
-    <div>
-      <h2><span class="first-name">Maxime</span> <span class="last-name">Hum</span></h2>
-    </div>
-  </header>
-
-  <!-- Page-specific (main) content here -->
-  <main id="tweets-container">
-    <section class="new-tweet">
-      <h2>Compose Tweet</h2>
-      <form method="post" action="/tweets">
-        <!-- <label for="tweet-text">What are you humming about?</label> -->
-        <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
-        <div class="form-footer">
-          <button type="submit">Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
-        </div>
-      </form>
-      <div id="form-error">
-        <i class="fa-solid fa-triangle-exclamation"></i>
-        <p>There was an error with your form submission</p>
-        <p class="error-detail"></p>
-        <button>Yes sir</button>
+  <main>
+    <header class="page-header">
+      <div>
+        <img src="/images/profile-hex.png">
       </div>
-    </section>
-    <section class="tweets-list">
+      <br>
+      <div>
+        <h2><span class="first-name">Maxime</span> <span class="last-name">Hum</span></h2>
+      </div>
+    </header>
+
+    <!-- Page-specific (main) content here -->
+    <section id="tweets-container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form method="post" action="/tweets">
+          <!-- <label for="tweet-text">What are you humming about?</label> -->
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+          <div class="form-footer">
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+        <div id="form-error">
+          <i class="fa-solid fa-triangle-exclamation"></i>
+          <p>There was an error with your form submission</p>
+          <p class="error-detail"></p>
+          <button>Yes sir</button>
+        </div>
+      </section>
+      <section class="tweets-list">
+      </section>
     </section>
   </main>
 </body>
