--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         <img src="/images/profile-hex.png">
       </div>
       <div>
-        <h2><span class="first-name">Maxime</span> <span class="last-name">Hum</span></h2>
+        <h2><span class="first-name">Sarah</span> <span class="last-name">Croche</span></h2>
       </div>
     </header>
 
