added scrolll to tp and focus toggle

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-  <script type="text/javascript" src="/scripts/new-tweet-display.js"></script>
+  <script type="text/javascript" src="/scripts/new-tweet-toggle.js"></script>
+  <script type="text/javascript" src="/scripts/scroll-top-toggle.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
     integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -82,6 +83,7 @@
       <section class="tweets-list">
       </section>
     </section>
+    <a id="toggle-top" href="#tweets-container"><i class="fa-solid fa-angles-up"></i></a>
   </main>
 </body>
 
