fixed fixed nav bar and scroll to top

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
-<body>
+<body id="body">
   <!-- Top nav bar (fixed) -->
   <nav>
     <span class="page-title">tweeter</span>
@@ -51,7 +51,7 @@
       <i class="arrow-icon fa-solid fa-angles-down"></i>
     </div>
   </nav>
-  <main>
+  <main id="main">
     <header class="page-header">
       <div>
         <img src="/images/profile-hex.png">
@@ -83,7 +83,7 @@
       <section class="tweets-list">
       </section>
     </section>
-    <a id="toggle-top" href="#tweets-container"><i class="fa-solid fa-angles-up"></i></a>
+    <a id="toggle-top" href="#body"><i class="fa-solid fa-angles-up"></i></a>
   </main>
 </body>
 
